syntax = "proto3";

package binance; 

import "github.com/asciiu/gomo/binance-service/proto/balance/balance.proto";

service BinanceService {
  rpc GetBalances(balance.BalanceRequest) returns (balance.BalancesResponse) {}
}